@@ -36,7 +36,7 @@ axcessms:
 balanced:
   login: 'e1c5ad38d1c711e1b36c026ba7e239a9'
 
-bambora:
+bambora_apac:
   username: nmi.api
   password: qwerty123
 
